--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
+            <li><a href="./recipes/fried-rice.html">Fried Rice</a></li>
         </ul>
     </body>
 </html>
