--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -33,6 +33,7 @@
         <li>Cover with foil and bake</li>
         <li>Let the lasagna rest before serving</li>
     </ol>
+    <a href="../index.html">Return to the homepage!</a>
     <!-- https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/ -->
 </body>
 </html>
