--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
             <li><a href="./recipes/fried-rice.html">Fried Rice</a></li>
+            <li><a href="./recipes/steak.html">Steak</a></li>
         </ul>
     </body>
 </html>
